--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
 		"@nestjs/common": "^7.0.0",
 		"@nestjs/core": "^7.0.0",
 		"@nestjs/platform-express": "^7.0.0",
+		"@nestjs/typeorm": "^7.1.5",
+		"pg": "^8.5.1",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
-		"rxjs": "^6.5.4"
+		"rxjs": "^6.5.4",
+		"typeorm": "^0.2.29",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^7.0.0",
@@ -36,6 +40,7 @@
 		"@types/jest": "25.2.3",
 		"@types/node": "^13.9.1",
 		"@types/supertest": "^2.0.8",
+		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "3.0.2",
 		"@typescript-eslint/parser": "3.0.2",
 		"eslint": "7.1.0",
